--- a/Sep2018_MVC/Areas/Staff/Views/Teacher/InformationAccount.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Teacher/InformationAccount.cshtml
@@ -1,10 +1,6 @@
-﻿@using Sep2018_MVC.Models
-@model Person
-@{
+﻿@{
     ViewBag.Title = "InformationAccount";
     Layout = "~/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml";
-    User meo = new User();
-    meo = TempData["User_Teacher"] as User;
 }
 
 @*<link href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
@@ -15,59 +11,55 @@
     <div class="row">
         <div class="col-md-5  toppad  pull-right col-md-offset-3 ">
             <h1> <br /> </h1>
+            <A href="edit.html">Edit Profile</A>
+
         </div>
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xs-offset-0 col-sm-offset-0 col-md-offset-3 col-lg-offset-3 toppad">
 
 
             <div class="panel panel-info">
                 <div class="panel-heading">
-                    <h3 class="panel-title">@Model.Name</h3>
+                    <h3 class="panel-title">Tran Van Xil</h3>
                 </div>
                 <div class="panel-body">
                     <div class="row">
-                        <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="~/images/Avatar/@meo.avatar" class="img-circle img-responsive"> </div>
+                        <div class="col-md-3 col-lg-3 " align="center"> <img alt="User Pic" src="http://babyinfoforyou.com/wp-content/uploads/2014/10/avatar-300x300.png" class="img-circle img-responsive"> </div>
                         <div class=" col-md-9 col-lg-9 ">
                             <table class="table table-user-information">
                                 <tbody>
                                     <tr>
+                                        <td>ID:</td>
+                                        <td>0123</td>
+                                    </tr>
+                                    <tr>
                                         <td>MSGV:</td>
-                                        <td>@Model.MS</td>
+                                        <td>T151535</td>
                                     </tr>
                                     <tr>
                                         <td>Birth Day</td>
-                                        <td>@Model.Birthday</td>
+                                        <td>01/20/1996</td>
                                     </tr>
 
                                     <tr>
                                     <tr>
                                         <td>Gender</td>
-                                        @{
-                                            if (Model.Gender == true)
-                                            {
-                                                <td>Male</td>
-                                            }
-                                            else
-                                            {
-                                                <td>Female</td>
-                                            }
-                                        }
-
+                                        <td>Male</td>
                                     </tr>
                                     <tr>
                                         <td>Home Town</td>
-                                        <td>@Model.HomeTown</td>
+                                        <td>Cai Nuoc, Ca Mau</td>
                                     </tr>
                                     <tr>
                                         <td>Current residence</td>
-                                        <td>@Model.CurrentResidence</td>
+                                        <td>Quan 1, tp HCM</td>
                                     </tr>
                                     <tr>
                                         <td>Email</td>
-                                        <td><a href="mailto:info@support.com">@Model.Email</a></td>
+                                        <td><a href="mailto:info@support.com">tranvanxil69@gmail.com</a></td>
                                     </tr>
                                 <td>Phone Number</td>
                                 <td>
-                                    @Model.PhoneNumber
+                                    0916698899
                                 </td>
 
                                 </tbody>
