Update InterFace imposible for VanLang Logo

--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_LayoutAdmin.cshtml
@@ -24,7 +24,6 @@
 
     <!-- Custom styles for this template -->
 
-
     <link href="~/Areas/Staff/Assert/Styles/style1.css" rel="stylesheet" />
 
     <link href="~/Areas/Staff/Assert/Styles/style-responsive.css" rel="stylesheet" />
@@ -235,10 +234,7 @@
         <!--footer start-->
         <footer class="site-footer">
             <div class="text-center">
-                2014 - Alvarez.is
-                <a href="index.html#" class="go-top">
-                    <i class="fa fa-angle-up"></i>
-                </a>
+                Hoa rơi cửa phật...! 2018
             </div>
         </footer>
         <!--footer end-->
