--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -9,7 +9,7 @@
         </a>
     </p>
     @*<h5 class="centered">Marcel Newman</h5>*@
-    <img src="~/Areas/Staff/Assert/Images/Identity_VI.png" class="img-responsive" />
+    <img style="width:50%;margin:auto;" src="~/images/logonew.png" class="img-responsive" />
     <h1> </h1>
 
     <li class="IA">
