--- a/Sep2018_MVC/Areas/Staff/Assert/Styles/style1.css
+++ b/Sep2018_MVC/Areas/Staff/Assert/Styles/style1.css
@@ -28,12 +28,11 @@ a, a:hover, a:focus {
     outline: none;
 }
 ::selection {
-
-    background: #68dff0;
+    background: #f10000;
     color: #fff;
 }
 ::-moz-selection {
-    background: #68dff0;
+    background: #f10000;
     color: #fff;
 }
 
@@ -214,15 +213,15 @@ hr {
 }
 
 ul.top-menu > li > .logout {
-	color: #f2f2f2;
-	font-size: 12px;
-	border-radius: 4px;
-	-webkit-border-radius: 4px;
-	border: 1px solid #64c3c2 !important;
-	padding: 5px 15px;
-	margin-right: 15px;
-	background: #68dff0;
-	margin-top: 15px;
+    color: #f2f2f2;
+    font-size: 12px;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    border: 1px solid #64c3c2 !important;
+    padding: 5px 15px;
+    margin-right: 15px;
+    background: #253031;
+    margin-top: 15px;
 }
 
 
@@ -232,7 +231,7 @@ ul.top-menu > li > .logout {
     width: 210px;
     height: 100%;
     position: fixed;
-    background: #424a5d;
+    background: #500909;
 }
 
 #sidebar h5 {
@@ -363,17 +362,16 @@ ul.sidebar-menu li a{
     transition: all 0.3s ease;
 }
 
-ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
-    background: #68dff0;
-    color: #fff;
-    display: block;
-
-    -webkit-transition: all 0.3s ease;
-    -moz-transition: all 0.3s ease;
-    -o-transition: all 0.3s ease;
-    -ms-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
+    ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
+        background: #8e1a1a;
+        color: #fff;
+        display: block;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+    }
 
 
 ul.sidebar-menu li a i {
@@ -413,7 +411,7 @@ ul.sidebar-menu li a.active i {
 }
 
 .black-bg {
-    background: #ffd777;
+    background: #b73030;
     border-bottom: 1px solid #c9aa5f;
 }
 
@@ -2216,7 +2214,7 @@ label {
 
 /*footer*/
 .site-footer {
-    background: #68dff0;
+    background: #462b2b;
     color: #fff;
     padding: 10px 0;
 }
