Thong ke theo nam chi tiet

--- a/Sep2018_MVC/Areas/Staff/Views/Giaovu/Index.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Giaovu/Index.cshtml
@@ -7,29 +7,26 @@
 </style>
 <br />
 <br>
-<div class="container" style="padding:8em">
+<div class="container" style="padding:5em">
     <div class="">
-        <div class="col-sm-6 col-md-4">
+        <div class="">
             <div class="thumbnail">
                 <a href="~/Staff/Giaovu/ListCourse">
                     <img src="~/images/schedule.png" alt="SCHEDULE" width="140px" height="140px" style="">
 
                     <div class="caption">
-                        <h3 style="padding-left:80px">Schedule</h3>
+                        <h3 style="text-align:center">Schedules</h3>
                     </div>
                 </a>
             </div>
-        </div>
-    </div>
-    <div class="">
-        <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
-                <a href="~/Staff/Giaovu/Statistical"
-                <img src="~/images/statistical.png" alt="STATISTICAL" width="140px" height="140px" style="">
+                <a href="~/Staff/Giaovu/Statistical">
+                    <img src="~/images/statistical.png" alt="SCHEDULE" width="140px" height="140px" style="">
 
-                <div class="caption">
-                    <h3 style="padding-left:80px">Statistical</h3>
-                </div>
+                    <div class="caption">
+                        <h3 style="text-align:center">Statisticals</h3>
+                    </div>
+                </a>
             </div>
         </div>
     </div>
