--- a/Sep2018_MVC/Areas/Staff/Views/Giaovu/ListCourse.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Giaovu/ListCourse.cshtml
@@ -6,7 +6,7 @@
 }
 <div class="container">
 
-  <h2>Danh sách các môn học năm 2018</h2>
+  <h2>Danh sách các khóa học năm 2018</h2>
         @foreach (var item in Model){
         
             <form action="~/Staff/Giaovu/ListClass" method="get">
