--- a/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
+++ b/Sep2018_MVC/Areas/Staff/Views/Shared/_SiderBarTeacher.cshtml
@@ -14,28 +14,28 @@
 
     <li class="IA">
         <a class="active" href="/Staff/Teacher/InformationAccount">
-            <i class="fa fa-dashboard"></i>
+            <i class="fa fa-book"></i>
             <span>Information Account</span>
         </a>
     </li>
 
     <li class="noti">
         <a class="active" href="/Staff/Teacher/Notifi">
-            <i class="fa fa-dashboard"></i>
+            <i class="fa fa-desktop"></i>
             <span>Notification</span>
         </a>
     </li>
 
     <li class="tkb">
         <a class="active" href="/Staff/Teacher/Schedule">
-            <i class="fa fa-dashboard"></i>
+            <i class="fa fa-th"></i>
             <span>Schedule</span>
         </a>
     </li>
 
     <li class="sub-menu">
         <a href="javascript:;">
-            <i class="fa fa-desktop"></i>
+            <i class="fa fa-chart-bar"></i>
             <span>History</span>
         </a>
         <ul class="sub">
@@ -44,12 +44,6 @@
         </ul>
     </li>
 
-    <li class="change">
-        <a class="active" href="~/Staff/AccountStaff/ChangePassword">
-            <i class="fa fa-dashboard"></i>
-            <span>Change password</span>
-        </a>
-    </li>
 
     <li class="sub-menu">
         <a href="javascript:;">
