--- a/Sep2018_MVC/Views/Shared/_Layout.cshtml
+++ b/Sep2018_MVC/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <div class="cssmenu">
         <a class="logo" href="~/Home/Index" title="Trang chủ" id="yui_3_17_2_1_1529435986177_153">
-            <img src="~/images/logo.png" alt="" id="team6">
+            <img src="~/images/logonew.png" style="    width: 140px;" alt="" id="team6">
         </a>
     </div>
     <br />
@@ -123,7 +123,7 @@
                     <div class="col-md-6">
                         <!-- Điền nội dung vào sau -->
                         <a class="logo" href="~/Home/Index" title="Trang chủ" id="yui_3_17_2_1_1529435986177_153">
-                            <img src="~/images/logo.png" alt="" id="team6">
+                            <img src="~/images/logonew.png"  style="    width: 140px;" alt="" id="team6">
                         </a>
 
                     </div>
